<resources>
    <string name="app_name">공주\n스탬프투어</string>
    <string name="facebook_app_id">217422435378299</string>
    <string name="kakao_app_key">c382ee5f3906b73ac72df987bdec71da</string>
    <string name="pass_patten">^(?=.*[a-z]+)(?=.*[0-9]+).{6,16}$</string>
    <string name="email_patten">[\\w\\~\\-\\.]+@[\\w\\~\\-]+(\\.[\\w\\~\\-]+)+</string>
    <string name="nick_patten">^[a-zA-Z0-9가-힣\\u318D\\u119E\\u11A2\\u2022\\u2025a\\u00B7\\uFE55]{2,6}+$</string>
    <string name="preference_private_name">stamp_tour_gongju</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="action_join">회원가입</string>
    <string name="action_find_user">ID.PW 찾기</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_facebook">페이스북 로그인</string>
    <string name="loginTitle">계정 로그인</string>
    <string name="loginSocialTitle">소셜 로그인</string>
    <string name="Toast_login_Success">정상적으로 로그인 되었습니다.</string>
    <string name="req_url_loggedin">user/login</string>
    <string name="req.url_loggedout">user/logout</string>
    <string name="req_url_user_check_version">user/check/version</string>
    <string name="req_url_download_zip">town/contents/contents.zip</string>
    <string name="req_url_regist_device">user/device/regist</string>
    <string name="req_url_push_test">user/push/test</string>
    <string name="req_url_town_list">town/list</string>
    <string name="req_url_current_stamp">user/current/stamp</string>
    <string name="req_url_user_rank">user/rank</string>
    <string name="req_url_user_remove">user/remove</string>
    <string name="req_url_stamp_check">stamp/check</string>
    <string name="req_url_password_chnage">user/change/password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="account_view_container">계정관리</string>
    <string name="hidemanage_view_container">숨김관리</string>
    <string name="present_view_container">선물 신청</string>
    <string name="research_view_container">설문</string>
    <string name="logout_view_container">로그아웃</string>
    <string name="hide_btn">숨김관리</string>
    <string name="sort_btn">정렬</string>
    <string name="main_toolbar_title">스탬프</string>
    <string name="main_list_item_name">이름</string>
    <string name="main_list_item_distance">거리</string>
    <string name="main_list_item_region">권역</string>
    <string name="main_header_secondview_text">찍은 스탬프</string>
    <string name="main_header_secondview_next_text">다음 선물까지</string>
    <string name="grade_1">성골</string>
    <string name="grade_2">진골</string>
    <string name="grade_pre_text">님은</string>
    <string name="grade_after_text">등급입니다.</string>
    <string name="grade_default_text">홍길동은 성골 등급입니다.</string>
    <string name="image_fragment_detail_text">SubTitle</string>
    <string name="image_description_contents">description</string>
    <string name="detail_toolbar_town_name_textview">마을이름</string>
    <string name="dialog_storage_less">외장메모리 용량이 부족합니다</string>
    <string name="confirm">확인</string>
    <string name="needsmemory">필요한 용량은 :</string>
    <string name="usablememory">사용가능한 용량은 :</string>
    <string name="mode_title0">거리순</string>
    <string name="mode_title1">이름별</string>
    <string name="mode_title2">권역별</string>
    <string name="share_button_text">공유</string>
    <string name="password_setting_string">비밀번호는 6~16자 영문 소문자, 숫자를 조합하여 설정해주세요.</string>
    <string name="social_account_text">소셜계정 입니다</string>
    <string name="password_confirm_string">비밀번호 확인</string>
    <string name="password_string">소셜계정 입니다</string>
    <string name="password_change_confirm_string">변경할 비밀번호 재확인</string>
    <string name="password_change_input_string">변경할 비밀번호 입력</string>
    <string name="nick_string">별명</string>
    <string name="default_nick_string">홍길동</string>
    <string name="email_account_string">이메일 계정</string>
    <string name="alert_remove_account_text">계정을 삭제하면 회원정보, 스탬프, 게시글, 상품 신청도 영구적으로 삭제됩니다. 신중하게 선택해 주세요.</string>
    <string name="comm_toolbar_title">계정관리</string>
    <string name="login_toolbar_title">로그인</string>
    <string name="hint_eamil_input">이메일을 입력하세요</string>
    <string name="hint_password_input">비밀번호를 입력하세요</string>
    <string name="rank_toolbar_title">랭킹</string>
    <string name="account_sub_title">계정정보</string>
    <string name="email">이메일</string>
    <string name="dummy_email">abcd@naver.com</string>
    <string name="nick">닉네임</string>
    <string name="dummy_nick">홍길동</string>
    <string name="password_change">비밀번호 변경</string>
    <string name="hint_password_input_reword">비밀번호를 다시 입력하세요.</string>
    <string name="password_guide_text">6~16자 영문 소문자 숫자를 조합하세요.</string>
    <string name="account_manage_delete">계정 삭제</string>
    <string name="account_manage_delete_guide">계정을 삭제하면 회원정보, 선물 신청 내역도 영구적으로\n삭제됩니다.</string>
    <string name="server_not_good">통신상태가 좋지 않습니다.</string>
    <string name="password_change_success">비밀번호 변경 성공</string>
    <string name="remove_acoount_success">회원탈퇴 성공</string>
    <string name="more_toolbar_title">더보기</string>
    <string name="map_toolbar_title">지도</string>
    <string name="stamp_zone_come_message">스탬프 존에 들어왔습니다.</string>
    <string name="hidelist_toolbar_title">숨김관리</string>
    <string name="btn_undo_hide_text">숨김해제</string>
    <string name="hide_notfication_text">숨겨졌습니다.</string>
    <string name="social_join_nick_hint">별명을 입력하세요.</string>
    <string name="social_join_confirm_textview_text">6자 이내로 입력하세요.(별명은 계정 찾기에 사용됩니다.)</string>
    <string name="btn_sendjoin">가입 신청</string>
    <string name="social_join_accept_textview_text">가입 신청을 누르시면 <u>개인정보취급방침</u>에 동의한 것으로 간주됩니다.</string>
    <string name="area_name">장소 이름</string>
    <string name="join_toolbar_title">회원가입</string>
    <string name="join_normal_email_hint">이메일을 입력하세요.</string>
    <string name="join_normal_nick_hint">별명을 입력하세요.</string>
    <string name="join_normal_confirm_textview_text">본인 계정의 이메일을 입력하세요.</string>
    <string name="join_normal_confirmpassword_textview_text">6~16자 영문 소문자, 숫자를 조합하세요.</string>
    <string name="join_normal_duplicate_text_btn">중복체크</string>
    <string name="find_id_title_text">아이디 찾기</string>
    <string name="terms_msg1"> 1. 수집하는 개인정보 항목 및 수집방법\r\n\r\n 댓츠잇은 회원가입, 원활한 고객상담, 각종 서비스 등 기본적인 서비스 제공을 위한 개인정보를 수집할 수 있습니다. 이용자의 기 본적 인권 침해의 우려가 있는 민감한 개인 정보(인종, 사상 및 신조, 정치적 성향 이나 범죄기록, 의료정보 등)는 기본적으로 수집하지 않습니다. 단, 불가피하게 수집이 필요한 경우 반드시 사전에 동의 절차를 거치도록 하겠습니다. \r\n\r\n •예상 수집항목 : 이름, 비밀번호, 휴대폰 번호, 이메일 주소\r\n\r\n •개인정보 수집 방법 : 앱 회원가입, 이벤트 응모, 회원정보 수정\r\n\r\n </string>
    <string name="terms_msg2"> 2. 개인정보의 수집 및 이용목적\r\n\r\n 댓츠잇은 수집한 개인정보를 다음의 목적을 위해 활용합니다. 이용자가 제공한 모든 정보는 하기 목적에 필요한 용도 이외로는 사 용되지 않으며 이용 목적이 변경될 시에는 사전 동의를 구할 것입니다.\r\n\r\n •회원 관리 : 회원제 서비스 이용에 따른 본인확인, 개인 식별, 불량회원의 부정 이용 방지와 비인가 사용 방지, 가입 의사 확 인, 만 14세 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 불만처리 등 민원처리, 고지사항 전달\r\n\r\n •마케팅 및 광고에 활용 : 신규 서비스 개발과 이벤트 행사에 따른 정보 전달 및 맞춤 서비스 제공, 인구통계학적 특성에 따른 서비스 제공, 접속 빈도 파악 또는 회원의 서비스 이용에 대한 통계\r\n\r\n </string>
    <string name="terms_msg3"> 3. 개인정보의 보유 및 이용기간 \r\n\r\n 댓츠잇은 회원 가입일로부터 서비스를 제공하는 기간 동안에 한하여 이용자의 개인정보를 보유 및 이용하게 됩니다. 회원 탈퇴를 요청하거나 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우 또는 수집 및 이용목적이 달성되거나 보유 및 이용기간이 종료 한 경우에는 원칙적으로 해당 정보를 지체 없이 파기합니다. 다만, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존 합니다. \r\n\r\n •보존 항목 : 서비스 가입, 이용 기록\r\n\r\n •보존이유 : 서비스 이용의 혼선 방지\r\n\r\n 그리고 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 아래와 같이 관계법령에서 정한 일정한 기간 동안 회원정보를 보관합니다.\r\n\r\n •보존 항목 : 서비스이용 관련 개인정보(로그인기록)\r\n\r\n •보존 이유 : 통신비밀보호법 \r\n\r\n •보존 기간 : 3개월\r\n\r\n •보존 항목 : 소비자의 불만 또는 분쟁처리에 관한 기록\r\n\r\n •보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\r\n\r\n •보존 기간 : 3년\r\n\r\n •보존 항목 : 계약 또는 청약철회, 대금결제 및 재화 등의 공급에 관한 기록\r\n\r\n •보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\r\n\r\n •보존 기간 : 5년\r\n\r\n •보존 항목 : 세법이 규정하는 모든 거래에 관한 장부 및 증빙서류\r\n\r\n •보존 이유 : 국세기본법, 법인세법\r\n\r\n •보존 기간 : 5년\r\n\r\n •보존 항목 : 전자금융 거래에 관한 기록\r\n\r\n •보존 이유 : 전자금융거래법\r\n\r\n •보존 기간 : 5년\r\n\r\n </string>
    <string name="terms_msg4"> 4. 개인정보의 파기절차 및 방법\r\n\r\n 댓츠잇은 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 파기절차 및 방법은 다음과 같습니다.\r\n\r\n 1. 파기절차\r\n\r\n •이용자가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기됩니다.\r\n\r\n •별도 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.\r\n\r\n 2. 파기방법\r\n\r\n •전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\r\n\r\n •종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.\r\n\r\n </string>
    <string name="terms_msg5"> 5. 개인정보 제공\r\n\r\n 댓츠잇은 이용자들의 개인정보를 "2. 개인정보의 수집목적 및 이용목적"에서 고지한 범위 내에서 사용하며, 이용자의 사전 동의 없이는 동 범위를 초과하여 이용하거나 원칙적으로 이용자의 개인정보를 외부에 제공하지 않습니다. 단, 다음의 경우에는 주의를 기울여 개인정보를 이용 및 제공할 수 있습니다.\r\n\r\n •이용자들이 사전에 동의한 경우\r\n\r\n 개인정보 제공 이전에 개인정보 제공자, 개인정보 제공 목적, 제공하는 개인정보의 항목 및 보유기간을 별도로 알리고 동의절차를 거치며, 이에 이용자가 동의하지 않을 경우에는 제 3자에게 이용자의 개인정보를 제공하지 않습니다.\r\n\r\n •서비스의 제공에 관한 계약의 이행을 위하여 필요한 개인정보로서 경제적/기술적인 사유로 통상의 동의를 받는 것이 현저히 곤란 한 경우\r\n\r\n •법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우\r\n\r\n </string>
    <string name="terms_msg6"> 6. 이용자 및 법정대리인의 권리와 그 행사방법\r\n\r\n "이용자 및 법정대리인(본인의 위임을 받지 않고도 법률의 규정에 의하여 대리권의 효력이 발생하는 자로 미성년자에 대한 친권자 나 후견인 등을 말함)은 언제든지 등록되어 있는 자신 혹은 당해 만 14세 미만 아동의 개인정보를 조회하거나 수정할 수 있으며 가입해지를 요청할 수도 있습니다. 이용자 혹은 만 14세 미만 아동의 개인정보 조회/수정을 위해서는 '개인정보변경'(또는 '회원 정보관리' 등)을 통하여 가능하며, 가입해지(동의철회)를 위해서는 '회원탈퇴'를 클릭하여 본인 확인 절차를 거치신 후 직접 열 람, 정정 또는 탈퇴가 가능합니다. 또는 개인정보관리책임자에게 서면, 전화 또는 이메일로 연락하시면 지체 없이 조치하겠습니다. 이용자의 개인정보의 오류에 대한 정정을 요청한 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다. 또한 잘못된 개인정보를 제3자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체 없이 통지하여 정정이 이루어지도록 하 겠습니다. 다음은 이용자 혹은 법정 대리인의 요청에 의해 해지 또는 삭제된 개인정보는 '3. 개인정보의 보유 및 이용기간'에 명 시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다. \r\n\r\n" </string>
    <string name="terms_msg7"> 7. 개인정보의 기술적, 관리적 보호 대책\r\n\r\n 댓츠잇은 이용자의 개인정보를 취급함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안정성 확보를 위하여 다 음과 같은 기술적, 관리적 대책을 강구하고 있습니다.\r\n\r\n •개인정보 암호화\r\n\r\n 이용자의 개인정보는 비밀번호에 의해 보호되며, 중요한 데이터는 파일 및 전송 데이터를 암호화하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 통해 보호 하고 있습니다.\r\n\r\n •개인정보 취급 직원의 교육\r\n\r\n 개인정보관련 취급 직원은 담당자에 한정시켜 최소화 하고 새로운 보안기술의 습득 및 개인정보보호 의무에 관해 정기적인 교육을 실시하며 별도의 비밀번호를 부여하여 접근 권한을 관리하는 등 관리적 대책을 시행하고 있습니다.\r\n\r\n •개인 아이디와 비밀번호 관리\r\n\r\n 이용자가 사용하는 ID와 비밀번호는 원칙적으로 이용자만이 사용하도록 되어 있습니다. 댓츠잇은 이용자의 개인적인 부주의로 ID, 비밀번호 등 개인정보가 유출되어 발생한 문제와 기본적인 인터넷의 위험성 때문에 일어나는 일들에 대해 책임을 지지 않습니다. 비밀번호에 대한 보안 의식을 가지고 비밀번호를 자주 변경하며 공용PC에서의 로그인시 개인정보가 유출되지 않도록 각별한 주의를 기울여 주시기 바랍니다. \r\n\r\n </string>
    <string name="terms_msg8"> 10. 개인정보에 관한 민원서비스\r\n\r\n 댓츠잇은 이용자의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 개인정보관리책임자를 지정하고 있 습니다. 이용자는 댓츠잇의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자로 신고하실 수 있습 니다. 댓츠잇은 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다. \r\n\r\n 개인정보 관리책임자\r\n 성명 : 김범수\r\n 전화 : 010-7638-0901\r\n 메일 : lizard70@naver.com\r\n\r\n </string>
    <string name="terms_msg9"> 12. 부칙\r\n\r\n 이 개인정보취급방침은 2016년 5월 1일부터 적용되며, 법령, 정책 또는 보안기술의 변경에 따라 내용의 추가, 삭제 및 수정이 있을 시에는 변경사항의 시행일의 최소 7일 전부터 사이트의 공지사항을 통하여 고지할 것 입니다. 다만, 회원의 권리 또는 의무 에 중요한 내용의 변경은 최소 30일전에 고지하겠습니다.\r\n\r\n •개인정보취급방침 시행일자 : 2016년 5월 1일\r\n\r\n </string>
    <string name="distance_string">거리</string>
    <string name="area_string">권역</string>
    <string name="name_string">이름</string>
    <string name="signin_facebook">페이스북 로그인</string>
    <string name="signin_kakao">카카오톡 로그인</string>
</resources>