<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">
        <include layout="@layout/include_terms_toolbar"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/terms_nestedscrollview"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg8"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stdColorBlack"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/terms_msg9"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>