<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.thatzit.kjw.stamptour_gongju_client.main.MainActivity">
    <item
        android:id="@+id/action_sort_region"
        android:orderInCategory="100"
        android:title="@string/area_string"
        app:showAsAction="collapseActionView"></item>
    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="200"
        android:title="@string/name_string"
        app:showAsAction="collapseActionView"></item>
    <item
        android:id="@+id/action_sort_distance"
        android:orderInCategory="300"
        android:title="@string/distance_string"
        app:showAsAction="collapseActionView"></item>

</menu>
