<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <include layout="@layout/include_login_toolbar"/>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/loginTitle"
                android:textSize="@dimen/LoginTitleTextSize"
                android:textColor="@color/text_dark_common"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/account_login_title_text_margin_top"
                android:layout_marginLeft="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/unfocused_edit"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_eamil_input"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/emailInput"
                    android:textColorHint="@color/stdColorHint2"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ceced2"></LinearLayout>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_password_input"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/pwInput"
                    android:textColorHint="@color/stdColorHint2"
                    android:textSize="17sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_border_search">
                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/app_main_color"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/text_dark_common"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/action_join"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark_common"
                    android:id="@+id/join_btn"/>

                <TextView
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/action_find_user"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_dark_common"
                    android:id="@+id/find_auth_btn"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginSocialTitle"
                android:textAlignment="textStart"
                android:textSize="@dimen/LoginTitleTextSize"
                android:textColor="@color/text_dark_common"
                android:layout_marginTop="@dimen/Login_Social_layout_vertical_margin"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/background_border_search">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/login_btn_facebook"
                    android:background="@color/colorFaceBookBtn"
                    android:text="@string/signin_facebook"
                    android:textColor="@color/colorFaceBookBtn_text"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_border_search">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/login_btn_kakao"
                    android:background="@color/colorKaKaoBtn"
                    android:text="@string/signin_kakao"
                    android:textColor="@color/colorKaKaoBtn_text"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
